<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbtnmasuk"
    tools:context=".UbahP">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/box_outside" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/ubah_password"
        android:textAlignment="center"
        android:textColor="@color/color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="197dp"
        android:hint="@string/ubah_password"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/textView2" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="211dp"
        android:hint="@string/konfirmasi_password"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:text="@string/apakah_anda_yakin_ingin_mengubah_password_anda"
        android:textAlignment="center"
        android:textColor="@color/color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />


    <Button
        android:id="@+id/button5"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button6"
        android:layout_marginStart="41dp"
        android:background="@color/colorbtndaftar"
        android:onClick="Edit"
        android:text="@string/batal"
        android:textColor="@color/colorbtnmasuk"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="41dp" />

    <Button
        android:onClick="Berhasil"
        android:id="@+id/button6"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="42dp"
        android:text="@string/ganti_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="42dp" />

</RelativeLayout>